// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AssetsList Component Empty State should match snapshot when no assets exist 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="max-w-screen-xl mx-auto px-4 mt-4"
  >
    <div
      class="flex flex-col items-center justify-center min-h-[60vh] text-center"
    >
      <h2
        class="text-3xl font-semibold text-text-emphasis mb-2"
      >
        No Assets Found
      </h2>
      <p
        class="text-sm text-text-secondary"
      >
        You don't have any assets yet, or they haven't been synced.
      </p>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component Loading State should match snapshot when loading 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="flex justify-center items-center min-h-[60vh]"
    >
      <p
        class="text-lg text-text-secondary"
      >
        Loading assets...
      </p>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component Multiple Structures should match snapshot with multiple structures 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="sticky top-16 z-[100] bg-[#0a0e1a] pb-3 mb-3"
    >
      <div
        class="flex items-center justify-between mb-3 pt-1"
      >
        <div>
          <h2
            class="text-xl font-semibold text-text-emphasis"
          >
            Asset Inventory
          </h2>
        </div>
        <div
          class="flex gap-2.5 items-center flex-wrap"
        >
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-interactive-hover border border-[rgba(0,212,255,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Items
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(139,92,246,0.08)] border border-[rgba(139,92,246,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5 text-[#8b5cf6]"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Types
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(245,158,11,0.08)] border border-[rgba(245,158,11,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin h-5 w-5 text-amber-manufacturing"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                30
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                m³
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(16,185,129,0.08)] border border-[rgba(16,185,129,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-dollar-sign h-5 w-5 text-teal-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-teal-success"
              >
                0 ISK
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Total Value
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-9 w-9 text-text-secondary hover:text-text-emphasis"
            data-state="closed"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-3 items-center"
      >
        <div
          class="relative flex-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-2.5 h-4 w-4 text-text-muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex h-9 w-full rounded-sm border px-3 py-1 text-base shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9 bg-background-panel border-overlay-strong text-text-emphasis placeholder:text-text-muted"
            placeholder="Search items..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2 whitespace-nowrap"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-sm border-2 border-transparent shadow-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-[var(--color-primary-cyan)] data-[state=checked]:shadow-[var(--glow-cyan-sm)] data-[state=unchecked]:bg-[var(--color-surface-elevated)]"
            data-state="unchecked"
            id="below-target"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-sm bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm text-text-emphasis cursor-pointer"
            for="below-target"
          >
            Below target only
          </label>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-medium"
    >
      <div
        class="p-0"
      >
        <div
          class="divide-y divide-[rgba(148,163,184,0.05)]"
        >
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Jita IV - Moon 4
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Amarr VIII - Station
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component With Basic Assets should match snapshot with basic assets 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="sticky top-16 z-[100] bg-[#0a0e1a] pb-3 mb-3"
    >
      <div
        class="flex items-center justify-between mb-3 pt-1"
      >
        <div>
          <h2
            class="text-xl font-semibold text-text-emphasis"
          >
            Asset Inventory
          </h2>
        </div>
        <div
          class="flex gap-2.5 items-center flex-wrap"
        >
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-interactive-hover border border-[rgba(0,212,255,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Items
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(139,92,246,0.08)] border border-[rgba(139,92,246,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5 text-[#8b5cf6]"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Types
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(245,158,11,0.08)] border border-[rgba(245,158,11,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin h-5 w-5 text-amber-manufacturing"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                18
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                m³
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(16,185,129,0.08)] border border-[rgba(16,185,129,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-dollar-sign h-5 w-5 text-teal-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-teal-success"
              >
                0 ISK
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Total Value
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-9 w-9 text-text-secondary hover:text-text-emphasis"
            data-state="closed"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-3 items-center"
      >
        <div
          class="relative flex-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-2.5 h-4 w-4 text-text-muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex h-9 w-full rounded-sm border px-3 py-1 text-base shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9 bg-background-panel border-overlay-strong text-text-emphasis placeholder:text-text-muted"
            placeholder="Search items..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2 whitespace-nowrap"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-sm border-2 border-transparent shadow-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-[var(--color-primary-cyan)] data-[state=checked]:shadow-[var(--glow-cyan-sm)] data-[state=unchecked]:bg-[var(--color-surface-elevated)]"
            data-state="unchecked"
            id="below-target"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-sm bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm text-text-emphasis cursor-pointer"
            for="below-target"
          >
            Below target only
          </label>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-medium"
    >
      <div
        class="p-0"
      >
        <div
          class="divide-y divide-[rgba(148,163,184,0.05)]"
        >
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Jita IV - Moon 4 - Caldari Navy Assembly Plant
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component With Containers should match snapshot with containers 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="sticky top-16 z-[100] bg-[#0a0e1a] pb-3 mb-3"
    >
      <div
        class="flex items-center justify-between mb-3 pt-1"
      >
        <div>
          <h2
            class="text-xl font-semibold text-text-emphasis"
          >
            Asset Inventory
          </h2>
        </div>
        <div
          class="flex gap-2.5 items-center flex-wrap"
        >
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-interactive-hover border border-[rgba(0,212,255,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                1
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Items
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(139,92,246,0.08)] border border-[rgba(139,92,246,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5 text-[#8b5cf6]"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                1
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Types
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(245,158,11,0.08)] border border-[rgba(245,158,11,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin h-5 w-5 text-amber-manufacturing"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                20
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                m³
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(16,185,129,0.08)] border border-[rgba(16,185,129,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-dollar-sign h-5 w-5 text-teal-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-teal-success"
              >
                0 ISK
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Total Value
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-9 w-9 text-text-secondary hover:text-text-emphasis"
            data-state="closed"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-3 items-center"
      >
        <div
          class="relative flex-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-2.5 h-4 w-4 text-text-muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex h-9 w-full rounded-sm border px-3 py-1 text-base shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9 bg-background-panel border-overlay-strong text-text-emphasis placeholder:text-text-muted"
            placeholder="Search items..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2 whitespace-nowrap"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-sm border-2 border-transparent shadow-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-[var(--color-primary-cyan)] data-[state=checked]:shadow-[var(--glow-cyan-sm)] data-[state=unchecked]:bg-[var(--color-surface-elevated)]"
            data-state="unchecked"
            id="below-target"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-sm bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm text-text-emphasis cursor-pointer"
            for="below-target"
          >
            Below target only
          </label>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-medium"
    >
      <div
        class="p-0"
      >
        <div
          class="divide-y divide-[rgba(148,163,184,0.05)]"
        >
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Jita IV - Moon 4 - Caldari Navy Assembly Plant
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component With Corporation Hangars should match snapshot with corporation hangars 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="sticky top-16 z-[100] bg-[#0a0e1a] pb-3 mb-3"
    >
      <div
        class="flex items-center justify-between mb-3 pt-1"
      >
        <div>
          <h2
            class="text-xl font-semibold text-text-emphasis"
          >
            Asset Inventory
          </h2>
        </div>
        <div
          class="flex gap-2.5 items-center flex-wrap"
        >
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-interactive-hover border border-[rgba(0,212,255,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                1
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Items
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(139,92,246,0.08)] border border-[rgba(139,92,246,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5 text-[#8b5cf6]"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                1
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Types
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(245,158,11,0.08)] border border-[rgba(245,158,11,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin h-5 w-5 text-amber-manufacturing"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                30
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                m³
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(16,185,129,0.08)] border border-[rgba(16,185,129,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-dollar-sign h-5 w-5 text-teal-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-teal-success"
              >
                0 ISK
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Total Value
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-9 w-9 text-text-secondary hover:text-text-emphasis"
            data-state="closed"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-3 items-center"
      >
        <div
          class="relative flex-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-2.5 h-4 w-4 text-text-muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex h-9 w-full rounded-sm border px-3 py-1 text-base shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9 bg-background-panel border-overlay-strong text-text-emphasis placeholder:text-text-muted"
            placeholder="Search items..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2 whitespace-nowrap"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-sm border-2 border-transparent shadow-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-[var(--color-primary-cyan)] data-[state=checked]:shadow-[var(--glow-cyan-sm)] data-[state=unchecked]:bg-[var(--color-surface-elevated)]"
            data-state="unchecked"
            id="below-target"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-sm bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm text-text-emphasis cursor-pointer"
            for="below-target"
          >
            Below target only
          </label>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-medium"
    >
      <div
        class="p-0"
      >
        <div
          class="divide-y divide-[rgba(148,163,184,0.05)]"
        >
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Jita IV - Moon 4 - Caldari Navy Assembly Plant
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetsList Component With Stockpile Markers should match snapshot with stockpile markers 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="mt-2 mb-2 px-6"
  >
    <div
      class="sticky top-16 z-[100] bg-[#0a0e1a] pb-3 mb-3"
    >
      <div
        class="flex items-center justify-between mb-3 pt-1"
      >
        <div>
          <h2
            class="text-xl font-semibold text-text-emphasis"
          >
            Asset Inventory
          </h2>
        </div>
        <div
          class="flex gap-2.5 items-center flex-wrap"
        >
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-interactive-hover border border-[rgba(0,212,255,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Items
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(139,92,246,0.08)] border border-[rgba(139,92,246,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5 text-[#8b5cf6]"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                2
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Types
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(245,158,11,0.08)] border border-[rgba(245,158,11,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin h-5 w-5 text-amber-manufacturing"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-text-emphasis"
              >
                46
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                m³
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 px-3 py-2 rounded-lg bg-[rgba(16,185,129,0.08)] border border-[rgba(16,185,129,0.2)]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-dollar-sign h-5 w-5 text-teal-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
            <div>
              <p
                class="text-sm font-bold text-teal-success"
              >
                0 ISK
              </p>
              <p
                class="text-[0.7rem] text-text-secondary"
              >
                Total Value
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-9 w-9 text-text-secondary hover:text-text-emphasis"
            data-state="closed"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-3 items-center"
      >
        <div
          class="relative flex-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-2.5 h-4 w-4 text-text-muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex h-9 w-full rounded-sm border px-3 py-1 text-base shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9 bg-background-panel border-overlay-strong text-text-emphasis placeholder:text-text-muted"
            placeholder="Search items..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2 whitespace-nowrap"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-sm border-2 border-transparent shadow-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-[var(--color-primary-cyan)] data-[state=checked]:shadow-[var(--glow-cyan-sm)] data-[state=unchecked]:bg-[var(--color-surface-elevated)]"
            data-state="unchecked"
            id="below-target"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-sm bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm text-text-emphasis cursor-pointer"
            for="below-target"
          >
            Below target only
          </label>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-medium"
    >
      <div
        class="p-0"
      >
        <div
          class="divide-y divide-[rgba(148,163,184,0.05)]"
        >
          <div>
            <button
              class="w-full flex items-center gap-2 px-3 py-2.5 hover:bg-[rgba(148,163,184,0.04)] text-left"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 text-text-secondary flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-[#3b82f6] flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <div
                class="flex-1 min-w-0"
              >
                <p
                  class="text-sm font-bold text-text-emphasis truncate"
                >
                  Jita IV - Moon 4 - Caldari Navy Assembly Plant
                </p>
                <p
                  class="text-xs text-text-muted"
                >
                  Test System
                   · 
                  Test Region
                </p>
              </div>
              <div
                class="flex items-center gap-0.5 flex-shrink-0"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 17v5"
                    />
                    <path
                      d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                  data-state="closed"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye-off h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                    />
                    <path
                      d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                    />
                    <path
                      d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                    />
                    <path
                      d="m2 2 20 20"
                    />
                  </svg>
                </button>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
